--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<TMS.Models.Ticket>
-@{
+﻿@{
     Layout = "~/Areas/HelpDesk/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Ticket Management";
 }
@@ -386,10 +385,10 @@
         <div class="box box-solid">
             <div class="box-body" style="display: block;">
                 <a class="btn bg-olive btn-flat" style="display: inline-block;" href='@Url.Action("CreateNewTicket", "ManageTicket")'>
-                    <i class="fa fa-plus" aria-hidden="true"></i> Create New
+                    <i class="fa fa-plus" aria-hidden="true"></i> New Ticket
                 </a>
                 <a class="btn bg-olive btn-flat margin-left10 disabled" style="display: inline-block;" data-role="btn-merge-ticket">
-                    Merge
+                    <i class="fa fa-compress" aria-hidden="true"></i> Merge
                 </a>
                 <div class="pull-right" style="margin-right: 20px">
                     <label>Status: </label>
@@ -403,7 +402,7 @@
                         <option value="6">Closed</option>
                     </select>&nbsp;&nbsp;
                     <label>Search:</label>
-                    <input type="text" id="search-txt" />
+                    <input type="text" id="search-txt" placeholder="Subject"/>
                 </div>
                 <table class="table" id="ticket-table">
                     <thead>
