--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{
+    string actionName = this.ViewContext.RouteData.Values["action"].ToString();
+    string controllerName = this.ViewContext.RouteData.Values["controller"].ToString();
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -77,22 +81,19 @@
                         <!-- User Account: style can be found in dropdown.less -->
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="~/Content/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                                <span class="hidden-xs">Help desk</span>
+                                <img src="@ViewBag.LayoutAvatarURL" class="user-image" alt="User Image">
+                                <span class="hidden-xs">@ViewBag.LayoutName</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
-                                    <img src="~/Content/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                                    <p>
-                                        Help desk
-                                        <small>FPT Software</small>
-                                    </p>
+                                    <img src="@ViewBag.LayoutAvatarURL" class="img-circle" alt="User Image" style="height: 45px;">
+                                    <p>@ViewBag.LayoutName</p>
                                 </li>
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
-                                        <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                        <a href="/HelpDesk/Profile" class="btn btn-default btn-flat">Profile</a>
                                     </div>
                                     <div class="pull-right">
                                         @using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -103,10 +104,6 @@
                                     </div>
                                 </li>
                             </ul>
-                        </li>
-                        <!-- Control Sidebar Toggle Button -->
-                        <li>
-                            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -119,42 +116,45 @@
                 <!-- Sidebar user panel -->
                 <div class="user-panel">
                     <div class="pull-left image">
-                        <img src="~/Content/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src="@ViewBag.LayoutAvatarURL" class="img-circle" alt="User Image" style="height: 45px;">
                     </div>
                     <div class="pull-left info">
-                        <p>Help desk</p>
-                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                        <p>@ViewBag.LayoutName</p>
+                        <i class="fa fa-circle text-success"></i> Online
                     </div>
                 </div>
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu">
                     <li class="header">MAIN NAVIGATION</li>
                     @RenderSection("SidebarMenu", false)
-                    <li id="menu-ticket" class="treeview">
-                        <a href="@Url.Action("Index","ManageTicket")">
+                    <li class="treeview @Html.Raw((controllerName == "ManageTicket") ? "active" : "")">
+                        <a href="@Url.Action("Index", "ManageTicket", new { area = "HelpDesk" })">
                             <i class="fa fa-files-o"></i>
                             <span>TICKET</span>
-                            <span class="pull-right-container">
-                                <span class="label label-primary pull-right">4</span>
-                            </span>
                         </a>
                     </li>
-                    <li>
-                    <li id="menu-knowledgebase" class="treeview">
-                        <a href="/KnowledgeBase/">
-                            <i class="fa fa-dashboard"></i> <span>KNOWLEDGE BASE</span>
+                    <li class="treeview @Html.Raw((controllerName == "KnowledgeBase") ? "active" : "")">
+                        <a href="@Url.Action("Index", "KnowledgeBase", new { area = "" })">
+                            <i class="fa fa-dashboard"></i>
+                            <span>KNOWLEDGE BASE</span>
                         </a>
                     </li>
-                    <li id="menu-requester" class="treeview">
+                    <li class="treeview">
                         <a href="#">
-                            <i class="fa fa-laptop"></i>
-                            <span>REQUESTER</span>
+                            <i class="fa fa-users"></i>
+                            <span>REQUESTERS INFO</span>
                         </a>
                     </li>
-                    <li id="menu-report" class="treeview">
-                        <a href="@Url.Action("Index", "Report")">
+                    <li class="treeview @Html.Raw((controllerName == "Report") ? "active" : "")">
+                        <a href="@Url.Action("Index", "Report", new { area = "HelpDesk" })">
                             <i class="fa fa-pie-chart"></i>
                             <span>REPORT</span>
+                        </a>
+                    </li>
+                    <li class="treeview @Html.Raw((controllerName == "Profile") ? "active" : "")">
+                        <a href="@Url.Action("Index", "Profile", new { area = "HelpDesk" })">
+                            <i class="fa fa-user"></i>
+                            <span>PROFILE</span>
                         </a>
                     </li>
                 </ul>
