--- a/TMS/TMS/Areas/Manager/Views/ManageSC/Urgency.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/ManageSC/Urgency.cshtml
@@ -1,21 +1,24 @@
-﻿@model TMS.Models.Department
-@{
-    ViewBag.Title = "Department";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+﻿@{
+    ViewBag.Title = "Urgency";
+    Layout = "~/Areas/Manager/Views/Shared/_Layout.cshtml";
 }
-
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-body">
-                <button type="button" class="btn btn-flat btn-primary" onclick="showCreateModal()"><i class="fa fa-plus"></i>&nbsp;New Department</button>
-                <table class="table dataTable" id="department-table">
+                <button type="button" class="btn btn-flat btn-primary" onclick="showCreateModal()"><i class="fa fa-plus"></i>&nbsp;New Urgency</button>
+                <table class="table dataTable" id="urgency-table" dt-options="dtOptions">
                     <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Action</th>
-                        </tr>
+                    <tr>
+                        <th>
+                            Name
+                        </th>
+                        <th>
+                            Description
+                        </th>
+                        <th>
+                        </th>
+                    </tr>
                     </thead>
                     <tbody></tbody>
                 </table>
@@ -35,7 +38,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">Department</h4>
+                <h4 class="modal-title">Urgency</h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
@@ -55,7 +58,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" id="create-btn" onclick="createDepartment()">Save</button>
+                <button type="button" class="btn btn-success" id="create-btn" onclick="createUrgency()">Save</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
@@ -83,20 +86,26 @@
     </div>
     <!-- /.modal-dialog -->
 </div>
+<!-- /.modal -->
 
 @Styles.Render("~/Content/datatables")
 @section scripts{
     @Scripts.Render("~/bundles/datatables")
     <script>
-        $("#department-table")
+        $(document).ready(function () {
+            reloadDataTable();
+        });
+
+        $("#urgency-table")
             .DataTable({
                 processing: true,
                 serverSide: true,
-                paging: false,
-                sort: false,
+                lengthChange: false,
                 filter: false,
+                paging: true,
+                sort: false,
                 ajax: {
-                    url: "/Admin/Department/GetDepartment"
+                    url: "/Manager/ManageSC/GetUrgency"
                 },
                 "columnDefs": [
                     {
@@ -114,22 +123,15 @@
                     },
                     {
                         "render": function (data, type, row) {
-                            return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getDepartmentDetail(\'' + row[0] + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;' +
-                                   '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row[0] + '\')"><i class="fa fa-trash-o"></i></a>';
+                            return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getUrgencyDetail(\'' + row[0] + '\')"><i class = "fa fa-pencil"></i></a>&nbsp;&nbsp;' +
+                                '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row[0] + '\')"><i class="fa fa-trash-o"></i></a>';
                         },
                         "targets": 2
                     }
                 ]
             });
-
-        var showCreateModal = function () {
-            clearModal();
-            $("#myModal").modal('show');
-            $('#create-btn').attr('onclick', 'createDepartment()');
-        }
-
         var reloadDataTable = function () {
-            var oTable = $("#department-table").dataTable();
+            var oTable = $("#urgency-table").dataTable();
             oTable._fnPageChange(0);
             oTable._fnAjaxUpdate();
         };
@@ -140,7 +142,13 @@
             $(".text-danger").hide();
         }
 
-        var createDepartment = function () {
+        var showCreateModal = function () {
+            clearModal();
+            $("#myModal").modal('show');
+            $('#create-btn').attr('onclick', 'createUrgency()');
+        };
+
+        var createUrgency = function () {
             var name = $("#name-txt").val();
             if (name.trim() === "") {
                 $("#name-validation-message").html("Name is required!");
@@ -150,14 +158,14 @@
                 $("#name-validation-message").show();
             } else {
                 $.ajax({
-                    url: "/Admin/Department/CreateDepartment",
+                    url: "/Manager/ManageSC/CreateUrgency",
+                    dataType: "json",
                     type: "POST",
-                    dataTpye: "JSON",
                     data: {
                         name: $("#name-txt").val(),
                         description: $("#description-txt").val()
                     },
-                    success: function(data) {
+                    success: function (data) {
                         if (data.success) {
                             $.notify(data.message, "success");
                             $("#myModal").modal("hide");
@@ -171,17 +179,17 @@
                             }
                         }
                     },
-                    error: function() {
+                    error: function () {
                         $.notify("Cannot connect to server!", "error");
                     }
                 });
             }
-        }
+        };
 
-        var getDepartmentDetail = function (id) {
+        var getUrgencyDetail = function (id) {
             clearModal();
             $.ajax({
-                url: "/Admin/Department/GetDepartmentDetail",
+                url: "/Manager/ManageSC/GetUrgencyDetail",
                 dataType: "json",
                 type: "GET",
                 data: {
@@ -192,7 +200,7 @@
                         $("#myModal").modal("show");
                         $("#name-txt").val(data.name);
                         $("#description-txt").val(data.description);
-                        $("#create-btn").attr("onclick", "editDepartment('" + id + "')");
+                        $("#create-btn").attr("onclick", "editUrgency('" + id + "')");
                     } else {
                         if (data.error) {
                             $.notify(data.message, "error");
@@ -203,9 +211,9 @@
                     $.notify("Cannot connect to server!", "error");
                 }
             });
-        }
+        };
 
-        var editDepartment = function (id) {
+        var editUrgency = function (id) {
             //jquery
             var name = $("#name-txt").val();
             if (name.trim() === "") {
@@ -218,7 +226,7 @@
                 //ajax syntax
                 $.ajax(
                 {
-                    url: "/Admin/Department/EditDepartment",
+                    url: "/Manager/ManageSC/EditUrgency",
                     dataType: "json",
                     type: "POST",
                     data: {
@@ -245,35 +253,39 @@
                     }
                 });
             }
+
         };
 
         var showDeleteModal = function (id) {
-            $("#yes-btn").attr("onclick", "deleteDepartment('" + id + "')");
+            $("#yes-btn").attr("onclick", "deleteUrgency('" + id + "')");
             $("#delete-modal").modal("show");
         };
 
-        var deleteDepartment = function (id) {
+        var deleteUrgency = function (id) {
             $.ajax({
-                url: "/Admin/Department/DeleteDepartment",
+                url: "/Manager/ManageSC/DeleteUrgency",
                 dataType: "json",
-                type: "POST",
-                data: { id: id },
+                type: "post",
+                data: {
+                    id: id
+                },
                 success: function (data) {
                     if (data.success) {
-                        $.notify(data.message, "success");
                         $("#delete-modal").modal("hide");
+                        $.notify(data.message, "success");
                         reloadDataTable();
                     } else if (!data.success) {
-                        $.notify(data.message, "error");
                         $("#delete-modal").modal("hide");
+                        $.notify(data.message, "error");
                     }
                 },
                 error: function () {
                     $.notify(data.message, "error");
                 }
             });
+        }
 
-        };
 
     </script>
 }
+
