--- a/TMS/TMS/Areas/Technician/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{
+    string actionName = this.ViewContext.RouteData.Values["action"].ToString();
+    string controllerName = this.ViewContext.RouteData.Values["controller"].ToString();
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -76,22 +80,19 @@
                         <!-- User Account: style can be found in dropdown.less -->
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="~/Content/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                                <span class="hidden-xs">Technician</span>
+                                <img src="@ViewBag.LayoutAvatarURL" class="user-image" alt="User Image">
+                                <span class="hidden-xs">@ViewBag.LayoutName</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
-                                    <img src="~/Content/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                                    <p>
-                                        Technician
-                                        <small>FPT Software</small>
-                                    </p>
+                                    <img src="@ViewBag.LayoutAvatarURL" class="img-circle" alt="User Image" style="height: 45px;">
+                                    <p>@ViewBag.LayoutName</p>
                                 </li>
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
-                                        <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                        <a href="/Technician/Profile" class="btn btn-default btn-flat">Profile</a>
                                     </div>
                                     <div class="pull-right">
                                         @using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -102,10 +103,6 @@
                                     </div>
                                 </li>
                             </ul>
-                        </li>
-                        <!-- Control Sidebar Toggle Button -->
-                        <li>
-                            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -118,42 +115,32 @@
                 <!-- Sidebar user panel -->
                 <div class="user-panel">
                     <div class="pull-left image">
-                        <img src="~/Content/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src="@ViewBag.LayoutAvatarURL" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
-                        <p>Technician</p>
+                        <p>@ViewBag.LayoutName</p>
                         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                     </div>
                 </div>
-                <!-- search form -->
-                @*<form action="#" method="get" class="sidebar-form">
-                        <div class="input-group">
-                            <input type="text" name="q" class="form-control" placeholder="Search...">
-                            <span class="input-group-btn">
-                                <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                        </div>
-                    </form>*@
-                <!-- /.search form -->
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu">
                     <li class="header">MAIN MENU</li>
-                    <li class="treeview">
-                        <a href="@(Url.Action("Index", "ManageTicket", new { area = "Technician" }))">
+                    <li class="treeview @Html.Raw((controllerName == "ManageTicket") ? "active" : "")">
+                        <a href="@Url.Action("Index", "ManageTicket", new { area = "Technician" })">
                             <i class="fa fa-files-o"></i>
                             <span>TICKET</span>
                         </a>
                     </li>
-                    <li class="treeview">
-                        <a href="@(Url.Action("Index", "KnowledgeBase", new { area = "" }))">
-                            <i class="fa fa-dashboard"></i> <span>SOLUTION</span>
+                    <li class="treeview @Html.Raw((controllerName == "KnowledgeBase") ? "active" : "")">
+                        <a href="@Url.Action("Index", "KnowledgeBase", new { area = "" })">
+                            <i class="fa fa-dashboard"></i>
+                            <span>KNOWLEDGE BASE</span>
                         </a>
                     </li>
-                    <li class="treeview">
-                        <a href="@(Url.Action("Index", "Profile"))">
-                            <i class="fa fa-user"></i> <span>PROFILE</span>
+                    <li class="treeview @Html.Raw((controllerName == "Profile") ? "active" : "")">
+                        <a href="@Url.Action("Index", "Profile", new { area = "Technician" })">
+                            <i class="fa fa-user"></i>
+                            <span>PROFILE</span>
                         </a>
                     </li>
                 </ul>
